align-self for ipad issue

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -56,6 +56,7 @@ img {
 .gallery__item {
   max-width: max-content;
   display: flex;
+  align-self: center;
   margin: 0.25rem;
   height: 100%;
   border-right: solid thin #aaa;
